Fix wrong positioning of edges

--- a/src/blite.sass
+++ b/src/blite.sass
@@ -12,6 +12,13 @@ body
   width: 100%
   position: absolute
 
+#canvas
+  position: absolute
+  width: 602px
+  height: 803px
+  top: 0px
+  left: 0px
+
 .ball
   width: 50px
   height: 50px
